--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/logo.jpg
+     - assets/images/telegram.png
+     - assets/images/whatsapp.png
+     - assets/images/phone_1.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
