--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
      - assets/images/telegram.png
      - assets/images/whatsapp.png
      - assets/images/phone_1.png
+     - assets/images/verified-account 1.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
