additional but working weel perfect

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.0
   flutter_slidable: ^3.0.1
   flutter_phone_direct_caller: ^2.1.0
+  shared_preferences: ^2.2.2
   
 
 dev_dependencies:
